// Copyright 2023 CeresDB Project Authors. Licensed under Apache-2.0.

syntax = "proto3";
package oss_cache;

message Bytes {
  // Cache value
  bytes value = 1;
  // CRC of value bytes
  uint32 crc = 2;
}
