// Copyright 2023 CeresDB Project Authors. Licensed under Apache-2.0.

syntax = "proto3";
package remote_engine;

import "engine/schema.proto";
import "engine/time_range.proto";
import "common.proto";
import "storage.proto";

service RemoteEngineService {
  rpc Read(ReadRequest) returns (stream ReadResponse) {}
  rpc Write(WriteRequest) returns (WriteResponse) {}
}

message TableIdentifier {
  string catalog = 1;
  string schema = 2;
  string table = 3;
}

message ReadOptions {
  uint64 batch_size = 1;
  uint64 read_parallelism = 2;
  // -1 means no timeout
  int64 timeout_ms = 3;
}

message Predicate {
  repeated bytes exprs = 1;
  time_range.TimeRange time_range = 2;
}

enum ReadOrder {
  None = 0;
  Asc = 1;
  Desc = 2;
}

message TableReadRequest {
  uint64 request_id = 1;
  ReadOptions opts = 2;
  schema.ProjectedSchema projected_schema = 3;
  Predicate predicate = 4;
  ReadOrder order = 5;
}

message ReadRequest {
  TableIdentifier table = 1;
  TableReadRequest read_request = 2;
}

message ReadResponse {
  common.ResponseHeader header = 1;
  oneof output {
      storage.ArrowPayload arrow = 2;
  }
}

message RowGroup {
  int64 min_timestamp = 1;
  int64 max_timestamp = 2;
  oneof rows {
      storage.ArrowPayload arrow = 3;
  }
}

message WriteRequest {
  TableIdentifier table = 1;
  RowGroup row_group = 2;
}

message WriteResponse {
  common.ResponseHeader header = 1;
  uint64 affected_rows = 2;
}
