// Copyright 2023 CeresDB Project Authors. Licensed under Apache-2.0.

// Types for table requests
syntax = "proto3";
package table_requests;

import "engine/schema.proto";

// Write table request
message WriteRequest {
  // Version of row encoding method
  uint32 version = 1;
  // Schema of rows
  //
  // Only used when version == 0
  schema.TableSchema schema = 2;
  // Rows in bytes when version == 0
  repeated bytes rows = 3;
  // Columns in bytes when version == 1
  repeated bytes cols = 4;
}
